--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     ]
   },
   "devDependencies": {
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.1.0",
+    "prettier": "^2.0.2",
     "prop-types": "^15.7.2"
   }
 }
